@@ -1,3 +1,5 @@
+- Fix: Coordinator curricular year statistics should use execution year on computation
+
 30.9.3 (14-08-2020)
 - Improvement: Child execution interval should be created with the default state (not open)
 - Improvement: Mark lesson instance as online
